[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portal-logger"
version = "0.2.4"
description = "Logger padronizado para RPAs enviarem logs ao portal"
authors = [
  { name="Time RPA", email="rpa@suaempresa.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0"
]

[tool.setuptools.packages.find]
where = ["."]
